--- a/server-netty/pom.xml
+++ b/server-netty/pom.xml
@@ -72,6 +72,11 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
         </dependency>
+        
+        <dependency>
+            <groupId>org.jboss.aerogear</groupId>
+            <artifactId>aerogear-simplepush-datastore-in-memory</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.slf4j</groupId>
