--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,8 @@
         <version.io.netty>4.0.8.Final</version.io.netty>
         <version.jackson>1.9.2</version.jackson>
         <version.commons.codec>1.8</version.commons.codec>
+        <version.ektorp>1.3.0</version.ektorp>
+        <version.jedis>2.0.0</version.jedis>
     </properties>
 
     <modules>
@@ -104,6 +106,16 @@
                 <artifactId>netty-codec-sockjs</artifactId>
                 <version>${version.io.netty}</version>
             </dependency>
+            <dependency>
+                <groupId>org.ektorp</groupId>
+                <artifactId>org.ektorp</artifactId>
+                <version>${version.ektorp}</version>
+            </dependency>
+            <dependency>
+                <groupId>redis.clients</groupId>
+                <artifactId>jedis</artifactId>
+                <version>2.0.0</version>
+        </dependency>
             <dependency>
                 <groupId>org.codehaus.jackson</groupId>
                 <artifactId>jackson-mapper-asl</artifactId>
