--- a/wildfly-module/pom.xml
+++ b/wildfly-module/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>org.jboss.aerogear</groupId>
         <artifactId>simplepush-server-parent</artifactId>
-        <version>0.8.1-SNAPSHOT</version>
+        <version>0.8.1</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>aerogear-simplepush-server-wildfly</artifactId>
