Refactoring DataStore API.
This is the first of an expected number of commit related to changing
the DataStore API to work well with all kinds of databases (relational
and none-relational).

--- a/protocol/pom.xml
+++ b/protocol/pom.xml
@@ -55,6 +55,19 @@
             </plugins>
         </pluginManagement>
     </build>
+    
+    
+    <dependencies>
+        <dependency>
+            <groupId>org.jboss.aerogear</groupId>
+            <artifactId>aerogear-simplepush-common</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
 </project>
 
