--- a/protocol/pom.xml
+++ b/protocol/pom.xml
@@ -62,6 +62,10 @@
             <groupId>org.jboss.aerogear</groupId>
             <artifactId>aerogear-simplepush-common</artifactId>
         </dependency>
+         <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-mapper-asl</artifactId>
+        </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
