--- a/server-api/pom.xml
+++ b/server-api/pom.xml
@@ -61,6 +61,11 @@
             <groupId>org.jboss.aerogear</groupId>
             <artifactId>aerogear-simplepush-protocol</artifactId>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
