--- a/server-core/pom.xml
+++ b/server-core/pom.xml
@@ -78,6 +78,12 @@
             <artifactId>aerogear-simplepush-datastore-in-memory</artifactId>
             <scope>test</scope>
         </dependency>
+        
+        <dependency>
+            <groupId>org.jboss.aerogear</groupId>
+            <artifactId>aerogear-simplepush-datastore-jpa</artifactId>
+            <scope>test</scope>
+        </dependency>
 
         <dependency>
             <groupId>junit</groupId>
