--- a/server-core/pom.xml
+++ b/server-core/pom.xml
@@ -38,6 +38,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <include.redis.tests>none</include.redis.tests>
     </properties>
 
     <dependencies>
@@ -85,6 +86,12 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.jboss.aerogear</groupId>
+            <artifactId>aerogear-simplepush-datastore-redis</artifactId>
+            <scope>test</scope>
+        </dependency>
+        
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -154,9 +161,28 @@
                     </systemProperties>
                 </configuration>
             </plugin>
-
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <includes>
+                        <include>org/jboss/aerogear/simplepush/server/InMemorySimplePushServerTest.java</include>
+                        <include>org/jboss/aerogear/simplepush/server/JpaSimplePushServerTest.java</include>
+                        <include>${include.redis.tests}</include>
+                    </includes>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
+    
+    <profiles>
+        <profile>
+            <id>redis</id>
+            <properties>
+                <include.redis.tests>org/jboss/aerogear/simplepush/server/RedisSimplePushServerTest.java</include.redis.tests>
+            </properties>
+          </profile>
+    </profiles>
 
 </project>
 
