--- a/datastores/pom.xml
+++ b/datastores/pom.xml
@@ -20,7 +20,6 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>simplepush-datastores-parent</artifactId>
     <packaging>pom</packaging>
-    <version>0.9.0-SNAPSHOT</version>
 
     <name>AeroGear SimplePush Datastores Parent</name>
     <url>http://aerogear.org/</url>
@@ -36,6 +35,7 @@
         <module>in-memory</module>
         <module>jpa</module>
         <module>redis</module>
+        <module>couchdb</module>
     </modules>
 
 </project>
