--- a/wildfly-module/src/main/resources/org/jboss/aerogear/simplepush/subsystem/LocalDescriptions.properties
+++ b/wildfly-module/src/main/resources/org/jboss/aerogear/simplepush/subsystem/LocalDescriptions.properties
@@ -25,3 +25,9 @@ simplepush.server.sockjs-keystore-password=The password for the keystore to use 
 simplepush.server.sockjs-enable-websocket=Enables/Disables WebSocket support for the SockJS server
 simplepush.server.sockjs-websocket-heartbeat-interval=A heartbeat-interval for WebSockets. This interval is separate from the normal SockJS heartbeat-interval and might be required in certain environments where idle connection are closed by a proxy. It is a separate value from the hearbeat that the streaming protocols use as it is often desirable to have a much larger value for it
 simplepush.server.sockjs-websocket-protocols=Specifies protocols which will be returned to during the Http upgrade request as the header 'WebSocket-Protocol'. This is only used with raw WebSockets ad the SockJS protocol does not support protocols to be specified by the client yet
+
+simplepush.server.datastore=Datastore type
+simplepush.server.datastore.add=Operation adds a datastore to the server
+simplepush.server.datastore.remove=Operation removes a datastore to the server
+simplepush.server.datastore.jpa=An optional datasource JNDI name that a service can depend on
+simplepush.server.datastore.datasource-jndi-name=An optional datasource JNDI name that a service can depend on
