Making the persistence-unit a configuration option for jpa.

--- a/wildfly-module/src/main/resources/org/jboss/aerogear/simplepush/subsystem/LocalDescriptions.properties
+++ b/wildfly-module/src/main/resources/org/jboss/aerogear/simplepush/subsystem/LocalDescriptions.properties
@@ -31,5 +31,6 @@ simplepush.server.datastore.add=Operation adds a datastore to the server
 simplepush.server.datastore.remove=Operation removes a datastore to the server
 simplepush.server.datastore.jpa=An optional datasource JNDI name that a service can depend on
 simplepush.server.datastore.datasource-jndi-name=An optional datasource JNDI name that a service can depend on
+simplepush.server.datastore.persistence-unit=Persistence Unit name when JPA is used
 simplepush.server.datastore.host=Host name for a database. Used for non-relational database
 simplepush.server.datastore.port=Port for a database. Used for non-relational database
