--- a/wildfly-module/src/main/resources/org/jboss/aerogear/simplepush/subsystem/LocalDescriptions.properties
+++ b/wildfly-module/src/main/resources/org/jboss/aerogear/simplepush/subsystem/LocalDescriptions.properties
@@ -34,3 +34,5 @@ simplepush.server.datastore.datasource-jndi-name=An optional datasource JNDI nam
 simplepush.server.datastore.persistence-unit=Persistence Unit name when JPA is used
 simplepush.server.datastore.host=Host name for a database. Used for non-relational database
 simplepush.server.datastore.port=Port for a database. Used for non-relational database
+simplepush.server.datastore.url=URL for a database. Used for non-relational database
+simplepush.server.datastore.database-name=Database name. Used for non-relational database
