--- a/wildfly-module/src/main/resources/org/jboss/aerogear/simplepush/subsystem/LocalDescriptions.properties
+++ b/wildfly-module/src/main/resources/org/jboss/aerogear/simplepush/subsystem/LocalDescriptions.properties
@@ -10,9 +10,9 @@ simplepush.server.datasource-jndi-name=An optional datasource JNDI name that a s
 simplepush.server.token-key=An token key used for encryption/decryption
 simplepush.server.useragent-reaper-timeout=Sets the amount of time which a UserAgent can be inactive after which it will be removed from the system
 simplepush.server.endpoint-prefix=The prefix for the the notification endpoint url
-simplepush.server.notification-tls=Determines is transport layer security should be used for notification endpoints (https)
-simplepush.server.notification-ack-interval=The interval time in milliseconds for resending un-acknowledged notifications.
-simplepush.server.notification-socket-binding=A reference to an outbound-socket-binding
+simplepush.server.endpoint-tls=Determines is transport layer security should be used for notification endpoints (https)
+simplepush.server.endpoint-ack-interval=The interval time in milliseconds for resending un-acknowledged notifications.
+simplepush.server.endpoint-socket-binding=A reference to an outbound-socket-binding
 simplepush.server.sockjs-prefix=The prefix/name, of the SockJS service
 simplepush.server.sockjs-cookies-needed=This is used by some load balancers to enable session stickyness
 simplepush.server.sockjs-url=The url to the sock-js-version.json. This is used by the 'iframe' protocol and the url is replaced in the script returned to the client 
