--- a/server-netty/src/test/resources/simplelogger.properties
+++ b/server-netty/src/test/resources/simplelogger.properties
@@ -1,1 +1,2 @@
+org.slf4j.simpleLogger.log.org.jboss.aerogear.simplepush.server.netty.standalone=debug
 org.slf4j.simpleLogger.defaultLogLevel=ERROR
