Upgrading to Jackson 2.3.0.
- this includes a package change to com.fasterxml.jackson.

--- a/netty-codec-sockjs/pom.xml
+++ b/netty-codec-sockjs/pom.xml
@@ -40,33 +40,33 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
-	<dependencies>
-		<dependency>
-			<groupId>io.netty</groupId>
-			<artifactId>netty-codec</artifactId>
-			<version>${version.io.netty}</version>
-		</dependency>
+    <dependencies>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-codec</artifactId>
+            <version>${version.io.netty}</version>
+        </dependency>
   
-		<dependency>
-			<groupId>io.netty</groupId>
-			<artifactId>netty-codec-http</artifactId>
-			<version>${version.io.netty}</version>
-		</dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-codec-http</artifactId>
+            <version>${version.io.netty}</version>
+        </dependency>
   
-		<dependency>
-			<groupId>io.netty</groupId>
-			<artifactId>netty-handler</artifactId>
-			<version>${version.io.netty}</version>
-		</dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-handler</artifactId>
+            <version>${version.io.netty}</version>
+        </dependency>
   
-		<dependency>
-			<groupId>org.codehaus.jackson</groupId>
-			<artifactId>jackson-mapper-asl</artifactId>
-		</dependency>
-  
-		<dependency>
-    		<groupId>org.mockito</groupId>
-    		<artifactId>mockito-core</artifactId>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
             <scope>test</scope>
             <!--version>1.9.5</version-->
             <exclusions>
@@ -75,7 +75,7 @@
                     <artifactId>hamcrest-core</artifactId>
                 </exclusion>
             </exclusions> 
-		</dependency>
+        </dependency>
   
         <dependency>
             <groupId>org.jmock</groupId>
