--- a/protocol/pom.xml
+++ b/protocol/pom.xml
@@ -63,8 +63,8 @@
             <artifactId>aerogear-simplepush-common</artifactId>
         </dependency>
          <dependency>
-            <groupId>org.codehaus.jackson</groupId>
-            <artifactId>jackson-mapper-asl</artifactId>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
