--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
 
     <properties>
         <version.io.netty>4.0.8.Final</version.io.netty>
-        <version.jackson>1.9.2</version.jackson>
+        <version.jackson>2.3.0</version.jackson>
         <version.commons.codec>1.8</version.commons.codec>
         <version.ektorp>1.3.0</version.ektorp>
         <version.jedis>2.0.0</version.jedis>
@@ -117,8 +117,8 @@
                 <version>2.0.0</version>
         </dependency>
             <dependency>
-                <groupId>org.codehaus.jackson</groupId>
-                <artifactId>jackson-mapper-asl</artifactId>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-databind</artifactId>
                 <version>${version.jackson}</version>
             </dependency>
             <dependency>
