--- a/server-vertx/pom.xml
+++ b/server-vertx/pom.xml
@@ -62,10 +62,6 @@
             <version>${vertx.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.codehaus.jackson</groupId>
-            <artifactId>jackson-mapper-asl</artifactId>
-        </dependency>
-        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
         </dependency>
@@ -128,9 +124,10 @@
                                                 aerogear-simplepush-common, 
                                                 aerogear-simplepush-server-api, 
                                                 aerogear-simplepush-server-core, 
-                                                aerogear-simplepush-datastore-in-memory, 
-                                                jackson-core-asl,
-                                                jackson-mapper-asl,
+                                                aerogear-simplepush-datastore-in-memory,
+                                                jackson-core,
+                                                jackson-databind,
+                                                jackson-annotations,
                                                 netty-all,
                                                 hazelcast,
                                                 slf4j-api,
