Adding aerogear-crypto dependencies to vertx module.

--- a/server-vertx/pom.xml
+++ b/server-vertx/pom.xml
@@ -128,6 +128,8 @@
                                                 jackson-core,
                                                 jackson-databind,
                                                 jackson-annotations,
+                                                aerogear-crypto,
+                                                bcprov-jdk16,
                                                 netty-all,
                                                 hazelcast,
                                                 slf4j-api,
