--- a/wildfly-module/pom.xml
+++ b/wildfly-module/pom.xml
@@ -188,6 +188,8 @@
                                                 aerogear-simplepush-common,
                                                 aerogear-netty-codec-sockjs,
                                                 netty-all,
+                                                jackson-core-asl,
+                                                jackson-mapper-asl,
                                                 jackson-core,
                                                 jackson-databind,
                                                 jackson-annotations,
