Storing salt in servers database.

--- a/server-netty/src/main/resources/simplepush-config.json
+++ b/server-netty/src/main/resources/simplepush-config.json
@@ -1,6 +1,6 @@
 {
     "host": "localhost",
     "port": 7777,
-    "token-key": "ChangeMe!!!!",
+    "password": "ChangeMe!!!!",
     "datastore": { "in-memory": {} }
 }
