--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
     <properties>
         <version.io.netty>4.0.8.Final</version.io.netty>
         <version.jackson>2.3.0</version.jackson>
-        <version.ektorp>1.3.0</version.ektorp>
+        <version.ektorp>1.4.1</version.ektorp>
         <version.jedis>2.0.0</version.jedis>
         <version.aerogear.crypto>0.1.2</version.aerogear.crypto>
         <version.bountycastle>140</version.bountycastle>
@@ -127,6 +127,16 @@
                 <artifactId>jedis</artifactId>
                 <version>2.0.0</version>
         </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-core</artifactId>
+                <version>${version.jackson}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-annotations</artifactId>
+                <version>${version.jackson}</version>
+            </dependency>
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-databind</artifactId>
