Updating to use Netty 5.0.0.Alpha1.

--- a/server-netty/pom.xml
+++ b/server-netty/pom.xml
@@ -156,6 +156,7 @@
                 <configuration>
                     <includes>
                         <include>org/jboss/aerogear/simplepush/server/netty/standalone/ConfigReaderTest.java</include>
+                        <include>org/jboss/aerogear/simplepush/server/netty/*Test.java</include>
                         <include>${include.couchdb.tests}</include>
                         <include>${include.redis.tests}</include>
                     </includes>
