--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,7 @@
     </scm>
 
     <properties>
-        <version.io.netty>5.0.0.Alpha1-SNAPSHOT</version.io.netty>
+        <version.io.netty>5.0.0.Alpha1</version.io.netty>
         <version.jackson>2.3.0</version.jackson>
         <version.ektorp>1.4.1</version.ektorp>
         <version.jedis>2.0.0</version.jedis>
