--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>simplepush-server-parent</artifactId>
     <packaging>pom</packaging>
-    <version>0.10.0</version>
+    <version>0.11.0-SNAPSHOT</version>
 
     <name>AeroGear SimplePush Server Parent</name>
     <url>http://aerogear.org/</url>
@@ -54,7 +54,7 @@
       <connection>scm:git:git://github.com/aerogear/aerogear-simplepush-server.git</connection>
       <developerConnection>scm:git:git@github.com:aerogear/aerogear-simplepush-server.git</developerConnection>
       <url>https://github.com/aerogear/aerogear-simplepush-server.git</url>
-      <tag>0.10.0</tag>
+      <tag>HEAD</tag>
     </scm>
 
     <properties>
